Fix vertical alignment

--- a/technologies.css
+++ b/technologies.css
@@ -14,7 +14,7 @@
 }
 
 .technologies li:nth-child(2n) {
-  top: 3em;
+  top: 3.5em;
   margin-left: -6em;
   margin-right: 0;
   position: relative;
